--- a/src/report_header.html
+++ b/src/report_header.html
@@ -1,4 +1,5 @@
-<html><head>
+<html>
+<head>
 <style>
 table, td, th {
   border: 1px inset;
@@ -24,9 +25,14 @@ td:nth-child(3) {
   width: 5%;
 }
 td:nth-child(4) {
+  text-align: center;
+  vertical-align: center;
+  width: 5%;
+}
+td:nth-child(5) {
   text-align: left;
   vertical-align: top;
-  width: 60%;
+  width: 70%;
 }
 </style>
 <title >Test Automation Execution Report</title>
