--- a/src/report_header.html
+++ b/src/report_header.html
@@ -5,14 +5,20 @@ table, td, th {
   border: 1px inset;
 }
 
+h2 {
+    margin-left: 1%;
+}
+
 table {
-    width: 80%;
+    width: 98%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 td:nth-child(1) {
   text-align: left;
   vertical-align: center;
-  width: 15%;
+  width: 25%;
 }
 td:nth-child(2) {
   text-align: center;
@@ -32,7 +38,7 @@ td:nth-child(4) {
 td:nth-child(5) {
   text-align: left;
   vertical-align: top;
-  width: 70%;
+  width: 60%;
 }
 </style>
 <title >Test Automation Execution Report</title>
